@startuml

title __ROUTECALCULATION's Class Diagram__\n

  package  {
    package routeCalculation {
      class Airport {
          - airportName : String
          - autoKey : int
          - flights : ArrayList<? extends Edge>
          - minimumDistance : double
          + Airport()
          + getAirportName()
          + getAutoKey()
          + setFlightsDeparting()
          + getEdges()
          + getMinimumDistance()
          + setMinimumDistance()
          + compareTo()
          + toString()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class CostBasedCalculation {
          + CostBasedCalculation()
          + calculateBestRouteToDestination()
      }
    }
  }
  

  package  {
    package routeCalculation {
      interface Edge {
          {abstract} + getOrigin()
          {abstract} + getTarget()
          {abstract} + getWeight()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class EdgeDecorator {
          + getOrigin()
          + getTarget()
          + getWeight()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class Flight {
          - sourceAirportID : int
          - targetAirportID : int
          - airlineID : int
          - flightID : int
          - flightNumber : String
          - departTime : String
          - departDay : String
          - arriveTime : String
          - arriveDay : String
          - cost : double
          + Flight()
          + Flight()
          + getOrigin()
          + getTarget()
          + getAirlineID()
          + getFlightNumber()
          + getDepartTime()
          + getDepartDay()
          + getArriveTime()
          + getArriveDay()
          + getWeight()
          + getFlightID()
          + setCost()
          + toString()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class FlightDiscountDecorator {
          - discountOnFlight : double
          + FlightDiscountDecorator()
          + getFlight()
          + getWeight()
      }
    }
  }
  

  package  {
    package routeCalculation {
      interface Node {
          {abstract} + getEdges()
          {abstract} + setMinimumDistance()
          {abstract} + getMinimumDistance()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class Route {
          - cost : double
          + Route()
          + getDestination()
          + getOrigin()
          + getFlightDecorator()
          + getCost()
      }
    }
  }
  

  package  {
    package routeCalculation {
      interface RouteCalculationLambdaFunctions {
          {abstract} + initialise()
          + eliminateDuplicateTargets()
          + checkForDuplicate()
          + calculateCostOfTraceBack()
          + getRouteWithSpecifiedDestination()
          + getAirportByID()
          + convertFlightTimeToDate()
          + convertStringToMinutes()
      }
    }
  }
  

  package  {
    package routeCalculation {
      interface RouteCalculationStrategy {
          {abstract} + calculateBestRouteToDestination()
      }
    }
  }
  

  package  {
    package routeCalculation {
      class TimeBasedCalculation {
          + TimeBasedCalculation()
          + calculateBestRouteToDestination()
      }
    }
  }
  

  Airport -up-|> Comparable
  Airport -up-|> Node
  CostBasedCalculation -up-|> RouteCalculationStrategy
  CostBasedCalculation o-- RouteCalculationLambdaFunctions : routeCalculationsLambdaFunctions
  EdgeDecorator -up-|> Edge
  EdgeDecorator o-- Edge : decoratedEdge
  Flight -up-|> Edge
  FlightDiscountDecorator -up-|> EdgeDecorator
  Route o-- Airport : destination
  Route o-- Airport : origin
  Route o-- Edge : discountedFlight
  TimeBasedCalculation -up-|> RouteCalculationStrategy
  TimeBasedCalculation o-- RouteCalculationLambdaFunctions : routeCalculationLambdaFunctions


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
